examples/good/5_closure.xp
f x = \y -> x + y;

g x = let {
    b y = x + y;
} in b;

main = f 5 3 == g 5 3;
