examples/bad/function_comparison.xp
functionA = \x -> x + 1;

functionB = \y -> y + 2;

main = functionA == functionB;
